--- a/alpha/event/templates/events/create_event.html
+++ b/alpha/event/templates/events/create_event.html
@@ -417,7 +417,7 @@
                                 </div>
                             </td>
                             <td>
-                                <input type="text" name="tickets" class="inputfield rborder" />
+                                {{form.tickets}}
                             </td>                                            
                         </tr>                                        
                         <tr class="picture">
