--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -47,6 +47,7 @@
     <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/browse/jquery.hoverIntent.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/ajax-popup.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/searchpad/buy-tickets.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/in-the-loop.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/remind-me.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/searchpad/event-actions.js" type="text/javascript"></script>
